tests/NormalTests/paczka1/small_fuzzy/55401683.err
Error in line 2: PlTsrBa A868 25,4
Error in line 5: PlTsrBa S952 66,0
Error in line 10: PlTsrBa A868 65,7
